benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_DivMod_ModExpPow2_Mul_iter2_error.log
=== Verification Error - Iteration 2 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_DivMod_ModExpPow2_Mul.rs
Time: 2025-09-15 11:06:04

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:65:18
   |
65 |     let bit = sy@[i];
   |                  ^^^

error[E0599]: no function or associated item named `from_seq` found for struct `std::vec::Vec<_, _>` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:77:25
   |
77 |   let result_vec = Vec::from_seq(result_seq);
   |                         ^^^^^^^^ function or associated item not found in `Vec<_, _>`
   |
note: if you're trying to build a new `std::vec::Vec<_, _>` consider using one of the following associated functions:
      std::vec::Vec::<T>::new
      std::vec::Vec::<T>::with_capacity
      std::vec::Vec::<T>::try_with_capacity
      std::vec::Vec::<T>::from_raw_parts
      and 6 others
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:434:5
help: there is an associated function `from` with a similar name
   |
77 -   let result_vec = Vec::from_seq(result_seq);
77 +   let result_vec = Vec::from(result_seq);
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0599, E0608.
For more information about an error, try `rustc --explain E0599`.

--------------------------------------------------------------------------------

Additional Output:
error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:65:18
   |
65 |     let bit = sy@[i];
   |                  ^^^

error[E0599]: no function or associated item named `from_seq` found for struct `std::vec::Vec<_, _>` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_ModExpPow2_Mul_impl.rs:77:25
   |
77 |   let result_vec = Vec::from_seq(result_seq);
   |                         ^^^^^^^^ function or associated item not found in `Vec<_, _>`
   |
note: if you're trying to build a new `std::vec::Vec<_, _>` consider using one of the following associated functions:
      std::vec::Vec::<T>::new
      std::vec::Vec::<T>::with_capacity
      std::vec::Vec::<T>::try_with_capacity
      std::vec::Vec::<T>::from_raw_parts
      and 6 others
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:434:5
help: there is an associated function `from` with a similar name
   |
77 -   let result_vec = Vec::from_seq(result_seq);
77 +   let result_vec = Vec::from(result_seq);
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0599, E0608.
For more information about an error, try `rustc --explain E0599`.
